BioInfomatics 1. 차세대염기서열분석

--- a/papers/1_차세대염기서열분석.md
+++ b/papers/1_차세대염기서열분석.md
@@ -9,3 +9,54 @@
 - 이번 장에서는 기초적인 게놈 데이터 분석 단계에 대해서만 다룰 예정이다. 
 
 ## 2. NCBI와 진뱅크 데이터베이스
+- 시작에 앞서, 이번 장에서 다룰 Biopython은 NCBI 데이터 검색 시스템인 Entrez의 인터페이스를 제공한다.
+- NCBI 데이터베이스에 접근해서 데이터 검색 및 로드하는 방법은 아래와 같다.
+<br><br>
+  
+① 필요한 라이브러리를 로드 하고, 이메일 주소를 입력한다.
+```buildoutcfg
+from Bio import Entrez, SeqIO
+
+Entrez.email = "[이메일주소입력]"
+```
+- 이번 예시에서는 서열데이터를 불러올 Entrez와 데이터 처리를 위한 SeqIO 모듈을 로드한다. 
+  - 이메일 주소는 반드시 한 번더 확인하고 사용할 것!!!
+<br><br>
+
+② 이번 예제에서는 말라리아를 일으키는 기생충인 'Plasmodium falciparum' 의 클로로퀸 내성 단백질 (chloroquine resistance transporter, CRT10) 에 대한 데이터베이스를 사용한다.
+```buildoutcfg
+handle = Entrez.esearch(
+        db="nucleotide",
+        term='CRT[Gene Name] AND "Plasmodium falciparum"[Organism]'
+    )
+
+rec_list = Entrez.read(handle)
+
+if rec_list['RetMax'] < rec_list['Count']:
+    handle = Entrez.esearch(
+        db="nucleotide",
+        term='CRT[Gene Name] AND "Plasmodium falciparum"[Organism]',
+        retmax=rec_list["Count"]
+    )
+    rec_list = Entrez.read(handle)
+```
+
+- 특정 종의 유전자를 찾으려면 NCBI의 검색문법에 맞게 작성해야한다. 구체적인 내용은 Biopython 혹은 NCBI Entrez 공식문서를 참고하면 된다.
+<br><br>
+  
+③ 다음으로 GeneBank 에서 모든 CRT 유전자의 DNA 서열을 다운로드한다. 
+```buildoutcfg
+id_list = rec_list["IdList"]
+
+hdl = Entrez.efetch(
+      db="nucleotide",
+      id=id_list,
+      rettype="gb"
+    )
+```
+- 위의 코드를 실행할 때 주의 사항이 있다. 해당 코드는 한 번에 모든 데이터를 다운로드 한다. 
+- 위의 예시에서 CRT 유전자는 총 481개의 DNA 서열로 구성되며, 개수가 적은 편에 속하지만, 만약 서열의 개수가 많다면, NCBI 서버와 PC에 큰 부하가 걸리게 된다.
+<br><br>
+  
+
+  
