BioInfomatics 1. 차세대염기서열분석

--- a/papers/1_차세대염기서열분석.md
+++ b/papers/1_차세대염기서열분석.md
@@ -11,6 +11,8 @@
 ## 2. NCBI와 진뱅크 데이터베이스
 - 시작에 앞서, 이번 장에서 다룰 Biopython은 NCBI 데이터 검색 시스템인 Entrez의 인터페이스를 제공한다.
 - NCBI 데이터베이스에 접근해서 데이터 검색 및 로드하는 방법은 아래와 같다.
+  - 참고자료<br>
+    http://www.incodom.kr/Biopython/Bio.Entrez
 <br><br>
   
 ① 필요한 라이브러리를 로드 하고, 이메일 주소를 입력한다.
