BioInfomatics 1. 차세대염기서열분석

--- a/papers/1_차세대염기서열분석.md
+++ b/papers/1_차세대염기서열분석.md
@@ -7,6 +7,11 @@
   - Chip-Seq 
     
 - 이번 장에서는 기초적인 게놈 데이터 분석 단계에 대해서만 다룰 예정이다. 
+- 시작에 앞서 사용할 모듈 중 Biopython 버전은 1.77 이하의 버전을 사용해야 아래의 코드를 정상적으로 실행할 수 있다.
+  - 1.78 버전부터는 Bio.Alphabet 의 IUPAC 모듈을 사용할 수 없으며, seq 객체에서도 알파벳은 다루지 않는다고 한다.
+  - IUPAC DNA 로 지정하면 A, C, G, T 의 문자만 허용하여 개발상 제약이 있던 문제가 있었음
+    <br><br>
+  - 출처: https://korbillgates.tistory.com/239 [생물정보학자의 블로그]
 
 ## 2. NCBI와 진뱅크 데이터베이스
 - 시작에 앞서, 이번 장에서 다룰 Biopython은 NCBI 데이터 검색 시스템인 Entrez의 인터페이스를 제공한다.
@@ -17,6 +22,7 @@
   
 ① 필요한 라이브러리를 로드 하고, 이메일 주소를 입력한다.
 ```
+[Code]
 from Bio import Entrez, SeqIO
 
 Entrez.email = "[이메일주소입력]"
@@ -27,6 +33,7 @@ Entrez.email = "[이메일주소입력]"
 
 ② 이번 예제에서는 말라리아를 일으키는 기생충인 'Plasmodium falciparum' 의 클로로퀸 내성 단백질 (chloroquine resistance transporter, CRT10) 에 대한 데이터베이스를 사용한다.
 ```
+[Code]
 handle = Entrez.esearch(
         db="nucleotide",
         term='CRT[Gene Name] AND "Plasmodium falciparum"[Organism]'
@@ -48,6 +55,7 @@ if rec_list['RetMax'] < rec_list['Count']:
   
 ③ 다음으로 GeneBank 에서 모든 CRT 유전자의 DNA 서열을 다운로드한다. 
 ```
+[Code]
 id_list = rec_list["IdList"]
 
 hdl = Entrez.efetch(
@@ -62,6 +70,7 @@ hdl = Entrez.efetch(
   
 ④ 검색 결과를 recs 변수에 List 형으로 저장한다.
 ```
+[Code]
 recs = list(SeqIO.parse(hdl, "gb"))
 ```
 - 위의 코드에서 SeqIO.parse 는 반복자(Iterator, 이터레이터) 형태로 결과를 반환해주며, 파이썬 내장함수인 list()를 사용해 목록형 데이터로 변환해 저장한다.  
@@ -70,7 +79,7 @@ recs = list(SeqIO.parse(hdl, "gb"))
   
 - 결과목록 중 레코드 1개를 확인해보자.
 ```
-[code]
+[Code]
 for rec in recs:
     if rec.name == "KM288867":
         break
@@ -86,7 +95,7 @@ Plasmodium falciparum isolate PA1796 chloroquine resistance transporter (crt) ge
 ⑤ 유전자 특징 정보를 출력한다.
 - 특징 정보에는 유전자를 통해서 만들어지는 단백질이나 기능성 RNA인 <b>유전자 산물</b>과 DNA 서열 중 단백질 정보를 담고 있는 부분인 <b>엑손</b> 등이 포함되어 있다.
 ```
-[code]
+[Code]
 for feature in rec.features:
     if feature.type == 'gene':
         print(feature.qualifiers['gene'])
@@ -188,7 +197,7 @@ qualifiers:
 
 ⑥ 레코드의 주석(서열위치와 상관없는 메타데이터)
 ```
-[code]
+[Code]
 for name, value in rec.annotations.items():
     print(f"{name}-{value}")
 
@@ -210,7 +219,7 @@ structured_comment-OrderedDict([('Assembly-Data', OrderedDict([('Sequencing Tech
 
 ⑦ 마지막으로 DNA 서열 정보를 확인 
 ```
-[code]
+[Code]
 print(len(rec.seq))
 
 [실행결과]
@@ -229,6 +238,7 @@ print(len(rec.seq))
 - 데이터는 FASTA 파일 형식으로 제공되며, 데이터는 앞선 예제에서 사용한 코드를 응용해서 사용한다.
   구체적인 코드는 다음과 같다.
 ```
+[Code]
 from Bio import Entrez, SeqIO
 
 Entrez.email="kid1064@gmail.com"
@@ -241,6 +251,7 @@ seq = SeqIO.read(handle, "fasta")
 ```
 - 읽어온 염기서열 데이터는 FASTA 파일 형식으로 저장한다.
 ```
+[Code]
 w_hdl = open("data/lactase.fasta", "w")
 w_seq = seq[11:5795]
 SeqIO.write([w_seq], w_hdl, 'fasta')
@@ -250,4 +261,51 @@ w_hdl.close()
 - 하지만, NGS와 같은 대량의 데이터를 적용할 경우 메모리 부족 현상이 발생하기 때문에 주의해야한다.
 
 ### 2) 염기서열 분석하기
+- 앞서 저장해둔 데이터를 로드한다.
+```
+[Code]
+recs = SeqIO.parse("data/lactase.fasta", "fasta")
+
+for rec in recs:
+    seq = rec.seq
+    print(rec.description)
+    print(seq[:10])
+    print(seq.alphabet)  # biopython <= 1.77 에서만 사용가능 / 1.78 이상부터는 제공하지 않음
+
+[실행 결과]
+NM_002299.4 Homo sapiens lactase (LCT), mRNA
+GAAAATGGAG
+SingleLetterAlphabet()
+```
+- 현재 해당 파일에 저장된 서열은 1개만 있지만, 일반적으로는 여러 개의 서열이 들어있으며, 그럴 경우 for 반복문을 사용해서 처리하면 된다.
+- 출력 결과를 보면 알 수 있듯이, DNA 서열 중 10개만 출력됬으며, 단순 알파벳으로만 구성된 것을 알 수 있다.
+<br><br>
+  
+- 이번에는 위의 seq 객체에서 사용된 알파벳을 바꿔보자. Biopython 의 seq 객체가 갖는 장점은 단순 문자열에 비해 알파벳의 정보를 갖고 있다는 점이며,
+  위의 알파벳 정보를 이용해 서열 데이터에 유용한 정보를 추가할 수 있다.<br>
+  방법은 다음과 같다.
+```
+[Code]
+seq = Seq.Seq(str(seq), IUPAC.unambiguous_dna)
+rna = seq.transcribe()
+print(rna)
+
+[실행 결과]
+GAAAAUGGAGCUGUC.....CCCGGUGUCUUCAUU
+
+```
+- 즉, 사용하는 서열 데이터가 DNA, RNA 혹은 단백질에 관한 서열인지, 확실하지 않은 서열 혹은 확실한 서열인지에 대해 알파벳으로 표현한다. 
+  예시에서는 확실한 DNA 서열임에도 불구하고, 알파벳 변환 시 IUPAC.unambiguous_dna 를 사용했다.
+- 다음으로 DNA 서열을 RNA로 바꿔준다.
+<br><br>
+  
+- 마지막으로 DNA 서열을 단백질로 번역한다. 
+```
+[Code]
+prot = seq.translate()
+print(prot)
+
+[실행 결과]
+ENGAVLACSLYCPAKFFMLGVRLGV**KFHFHRWSS.....QVLQAL*ARENTTKPTGIEPGVFI
+```
 
