[Kaggle Competition]SIIA_FISABIO:1_Data_Exploring

--- a/papers/1_차세대염기서열분석.md
+++ b/papers/1_차세대염기서열분석.md
@@ -308,4 +308,4 @@ print(prot)
 [실행 결과]
 ENGAVLACSLYCPAKFFMLGVRLGV**KFHFHRWSS.....QVLQAL*ARENTTKPTGIEPGVFI
 ```
-
+- 실행 결과를 통해서 알 수 있듯이, 정지 코돈이 * 로 표시된 단백질 서열을 볼 수 있다.
